--- a/welcome.html
+++ b/welcome.html
@@ -57,4 +57,4 @@
 
 
 
-<div data-silex-type="container" class="editable-style silex-id-1542625424614-1 container-element" data-silex-id="silex-id-1542625424614-1" style=""><div data-silex-type="text" class="editable-style silex-id-1542625476291-2 text-element text-style-1" data-silex-id="silex-id-1542625476291-2" style=""><div class="silex-element-content normal"><h3 style="text-align: center; "><font class="heading3" size="7">Welcome to MIXED CAFE</font></h3></div></div></div></body></html>
+<div data-silex-type="container" class="editable-style silex-id-1542625424614-1 container-element" data-silex-id="silex-id-1542625424614-1" style=""><div data-silex-type="text" class="editable-style silex-id-1542625476291-2 text-element text-style-1" data-silex-id="silex-id-1542625476291-2" style=""><div class="silex-element-content normal"><h3 style="text-align: center; "><font class="heading3" size="7" style="text-shadow: 2.5px 2px #babfc6;">Welcome to MIXED CAFE</font></h3></div></div></div></body></html>
